<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/butLangauge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_languages" />

    <Button
        android:id="@+id/butEncounters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_encounters" />

    <Button
        android:id="@+id/butSystemViewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_system_viewer" />

</LinearLayout>