<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblSyll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblSyl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/numSyll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblWords"
        android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
        android:id="@+id/numWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" >

        <requestFocus />
    </EditText>      
    <Button
        android:id="@+id/butGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/butGen" />

</LinearLayout>